abstract public class WildAnimal extends Animal {

    @Override
    public void eat() {
        System.out.println("CHOMP!!!  I ate your hand.  It was yummy");
    }
}
