package com.example.tinyfarm;

public class Man {
    public Animal buyAnimal(double d){
        Animal a = new Tiger();
        return a;
    }
}
